--- a/SensorHelmetMobile/SensorHelmetMobileApp/SensorHelmetMobileApp/Sources/Storyboards/Base.lproj/Main.storyboard
+++ b/SensorHelmetMobile/SensorHelmetMobileApp/SensorHelmetMobileApp/Sources/Storyboards/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ec0-Zi-zTh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ec0-Zi-zTh">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -105,6 +106,12 @@
                                     <constraint firstAttribute="width" constant="200" id="Qgp-nZ-YaI"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e7P-Qs-QYe">
+                                <rect key="frame" x="15" y="715.66666666666663" width="363" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -115,6 +122,7 @@
                             <constraint firstItem="iZ8-kx-HZC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="3e7-HM-f2f"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="56a-of-88J" secondAttribute="trailing" constant="15" id="4Ha-RJ-aLJ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nof-ZQ-38d" secondAttribute="trailing" constant="15" id="4hH-2z-Zg4"/>
+                            <constraint firstItem="e7P-Qs-QYe" firstAttribute="top" secondItem="56a-of-88J" secondAttribute="bottom" constant="10" id="9DC-Tz-zW5"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iZ8-kx-HZC" secondAttribute="trailing" constant="15" id="BGH-cj-ssf"/>
                             <constraint firstItem="Fba-Uw-YkV" firstAttribute="top" secondItem="kDq-vg-v64" secondAttribute="bottom" constant="10" id="DeD-kR-JZh"/>
                             <constraint firstItem="Bxo-pE-O6H" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Jdb-Px-UGJ"/>
@@ -126,6 +134,8 @@
                             <constraint firstItem="2TC-bX-Kiy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="X3O-WK-Kf8"/>
                             <constraint firstItem="56a-of-88J" firstAttribute="top" secondItem="MoC-BA-kQq" secondAttribute="bottom" constant="10" id="XS1-Se-kYz"/>
                             <constraint firstItem="Drb-CP-LAX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="XeN-NK-iYS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="e7P-Qs-QYe" secondAttribute="trailing" constant="15" id="Y4T-kX-lLU"/>
+                            <constraint firstItem="e7P-Qs-QYe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="Zon-pf-ErT"/>
                             <constraint firstItem="MoC-BA-kQq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="ac0-Js-ih8"/>
                             <constraint firstItem="PNN-hj-BYk" firstAttribute="top" secondItem="nof-ZQ-38d" secondAttribute="bottom" constant="10" id="av2-d5-LKN"/>
                             <constraint firstItem="kDq-vg-v64" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="awZ-qx-P3B"/>
@@ -148,6 +158,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="4m7-Ua-0xm"/>
                     <connections>
+                        <outlet property="COGasDensityLabel" destination="e7P-Qs-QYe" id="1dg-kw-hlx"/>
                         <outlet property="bluetoothButton" destination="Cj6-aL-nq4" id="oTz-2A-hxe"/>
                         <outlet property="curDateLabel" destination="nof-ZQ-38d" id="yoe-Hz-AV2"/>
                         <outlet property="dateLabel" destination="PNN-hj-BYk" id="rUt-KO-8nD"/>
@@ -165,7 +176,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1877.0992366412213" y="-129.57746478873241"/>
+            <point key="canvasLocation" x="1901.5267175572519" y="-281.69014084507046"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="H9U-lE-RDO">
